--- a/LCNavigationControllerDemo/Base.lproj/Main.storyboard
+++ b/LCNavigationControllerDemo/Base.lproj/Main.storyboard
@@ -29,12 +29,25 @@
                                     <action selector="pushBtnClicked" destination="1YF-0K-Tmz" eventType="touchUpInside" id="4mg-cm-zb2"/>
                                 </connections>
                             </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="1" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oFW-Xm-NZP">
+                                <rect key="frame" x="250" y="120" width="100" height="100"/>
+                                <animations/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="100" id="HHM-bw-hol"/>
+                                    <constraint firstAttribute="width" constant="100" id="JU4-Sn-cTD"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="80"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <animations/>
                         <color key="backgroundColor" red="0.91764705879999997" green="0.33333333329999998" blue="0.41960784309999999" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
                             <constraint firstItem="doY-Oz-yDX" firstAttribute="centerX" secondItem="dii-tt-YZg" secondAttribute="centerX" id="DST-zv-Mdi"/>
                             <constraint firstItem="doY-Oz-yDX" firstAttribute="centerY" secondItem="dii-tt-YZg" secondAttribute="centerY" id="aTW-uu-iDn"/>
+                            <constraint firstItem="oFW-Xm-NZP" firstAttribute="centerX" secondItem="dii-tt-YZg" secondAttribute="centerX" id="htd-GL-WUk"/>
+                            <constraint firstItem="oFW-Xm-NZP" firstAttribute="top" secondItem="E1d-54-p2N" secondAttribute="bottom" constant="100" id="vYz-Sf-gff"/>
                         </constraints>
                     </view>
                 </viewController>
@@ -78,6 +91,17 @@
                                     <action selector="pushBtnClicked" destination="T5G-Y9-bss" eventType="touchUpInside" id="iGf-RS-fU5"/>
                                 </connections>
                             </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="2" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MAh-G1-xLP">
+                                <rect key="frame" x="250" y="120" width="100" height="100"/>
+                                <animations/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="100" id="SOh-W5-jug"/>
+                                    <constraint firstAttribute="height" constant="100" id="ZGY-fi-LqG"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="80"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <animations/>
                         <color key="backgroundColor" red="0.98823529409999999" green="0.86666666670000003" blue="0.34901960780000002" alpha="1" colorSpace="calibratedRGB"/>
@@ -85,6 +109,8 @@
                             <constraint firstItem="n9d-R3-WaH" firstAttribute="centerY" secondItem="qac-cR-ZXV" secondAttribute="centerY" id="BMC-B7-dLz"/>
                             <constraint firstItem="oRt-oE-3fs" firstAttribute="centerX" secondItem="qac-cR-ZXV" secondAttribute="centerX" id="CRN-VS-FQv"/>
                             <constraint firstItem="oRt-oE-3fs" firstAttribute="top" secondItem="n9d-R3-WaH" secondAttribute="bottom" constant="60" id="HwD-NY-pvo"/>
+                            <constraint firstItem="MAh-G1-xLP" firstAttribute="centerX" secondItem="qac-cR-ZXV" secondAttribute="centerX" id="KEx-1I-EQm"/>
+                            <constraint firstItem="MAh-G1-xLP" firstAttribute="top" secondItem="E2Z-qK-8xi" secondAttribute="bottom" constant="100" id="P96-Hb-uhd"/>
                             <constraint firstItem="n9d-R3-WaH" firstAttribute="centerX" secondItem="qac-cR-ZXV" secondAttribute="centerX" id="yMf-3G-yQI"/>
                         </constraints>
                     </view>
@@ -133,13 +159,26 @@
                                     <action selector="popToRootBtnClicked" destination="NcZ-IX-lxi" eventType="touchUpInside" id="8z1-fg-fJH"/>
                                 </connections>
                             </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="3" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eCn-2n-Nwt">
+                                <rect key="frame" x="250" y="120" width="100" height="100"/>
+                                <animations/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="100" id="B0z-ht-nCj"/>
+                                    <constraint firstAttribute="height" constant="100" id="LQ1-Nt-y7f"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="80"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <animations/>
                         <color key="backgroundColor" red="0.37647058820000001" green="0.58823529409999997" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
+                            <constraint firstItem="eCn-2n-Nwt" firstAttribute="centerX" secondItem="gIg-io-ynB" secondAttribute="centerX" id="4wP-NE-MOA"/>
                             <constraint firstItem="PkV-g0-Djm" firstAttribute="centerX" secondItem="gIg-io-ynB" secondAttribute="centerX" id="6cp-hW-AOB"/>
                             <constraint firstItem="wBn-lt-XUp" firstAttribute="top" secondItem="PkV-g0-Djm" secondAttribute="bottom" constant="60" id="8ZM-Oq-x5T"/>
                             <constraint firstItem="PkV-g0-Djm" firstAttribute="centerY" secondItem="gIg-io-ynB" secondAttribute="centerY" id="bkN-bN-hJ7"/>
+                            <constraint firstItem="eCn-2n-Nwt" firstAttribute="top" secondItem="Utw-Gh-Pz7" secondAttribute="bottom" constant="100" id="jbd-Xd-27j"/>
                             <constraint firstItem="wBn-lt-XUp" firstAttribute="centerX" secondItem="gIg-io-ynB" secondAttribute="centerX" id="neh-zN-UjV"/>
                         </constraints>
                     </view>
